apps/support/glpi/overlays/homelab/patch-resources.yaml
# glpi/overlays/homelab/patch-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: glpi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi-mysql
spec:
  replicas: 1
