apps/support/glpi/overlays/homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glpi
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - glpi.support4u.se
      secretName: glpi-tls
  rules:
    - host: glpi.support4u.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glpi
                port:
                  number: 80
